src/test/ui/resolve/issue-39226.stderr
error[E0423]: expected value, found struct `Handle`
  --> $DIR/issue-39226.rs:11:17
   |
LL | struct Handle {}
   | ---------------- `Handle` defined here
...
LL |         handle: Handle
   |                 ^^^^^^
   |
help: use struct literal syntax instead
   |
LL |         handle: Handle {}
   |                 ~~~~~~~~~
help: did you mean `handle`? (a similarly named local variable)
   |
LL |         handle: handle
   |                 ~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
